--- a/DinamickoProgramiranje/DinamickoProgramiranje/DinamickoProgramiranje.csproj
+++ b/DinamickoProgramiranje/DinamickoProgramiranje/DinamickoProgramiranje.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FormPocetna.Designer.cs">
       <DependentUpon>FormPocetna.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormZadatak1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormZadatak1.Designer.cs">
+      <DependentUpon>FormZadatak1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormModeliZaliha.resx">
@@ -65,6 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPocetna.resx">
       <DependentUpon>FormPocetna.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormZadatak1.resx">
+      <DependentUpon>FormZadatak1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
