--- a/DinamickoProgramiranje/DinamickoProgramiranje/DinamickoProgramiranje.csproj
+++ b/DinamickoProgramiranje/DinamickoProgramiranje/DinamickoProgramiranje.csproj
@@ -64,6 +64,12 @@
     <Compile Include="FormZadatak1.Designer.cs">
       <DependentUpon>FormZadatak1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormZadatak2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormZadatak2.Designer.cs">
+      <DependentUpon>FormZadatak2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormModeliZaliha.resx">
@@ -74,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormZadatak1.resx">
       <DependentUpon>FormZadatak1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormZadatak2.resx">
+      <DependentUpon>FormZadatak2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
