Izrađeno računanje prvog razdoblja
Izrađeno je dinamičko kreiranje TextBoxova za unos potražnje, kreiranje tablice s pripadajućim brojem stupaca i redaka. Izrađeno je računanje prvog razdoblja.

--- a/DinamickoProgramiranje/DinamickoProgramiranje/DinamickoProgramiranje.csproj
+++ b/DinamickoProgramiranje/DinamickoProgramiranje/DinamickoProgramiranje.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormDinamickoProgramiranje.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDinamickoProgramiranje.Designer.cs">
+      <DependentUpon>FormDinamickoProgramiranje.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormPocetna.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormDinamickoProgramiranje.resx">
+      <DependentUpon>FormDinamickoProgramiranje.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormPocetna.resx">
       <DependentUpon>FormPocetna.cs</DependentUpon>
     </EmbeddedResource>
