--- a/DinamickoProgramiranje/DinamickoProgramiranje/DinamickoProgramiranje.csproj
+++ b/DinamickoProgramiranje/DinamickoProgramiranje/DinamickoProgramiranje.csproj
@@ -76,6 +76,12 @@
     <Compile Include="FormZadatak3.Designer.cs">
       <DependentUpon>FormZadatak3.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormZadatak4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormZadatak4.Designer.cs">
+      <DependentUpon>FormZadatak4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormModeliZaliha.resx">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormZadatak3.resx">
       <DependentUpon>FormZadatak3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormZadatak4.resx">
+      <DependentUpon>FormZadatak4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
